force-app/main/default/objects/saleswings__Website_Visit__c/saleswings__Website_Visit__c.object-meta.xml
<CustomObject>
    <label>SalesWings Page Visit</label>
    <nameField>
        <displayFormat>V-{00000}</displayFormat>
        <label>Website Visit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SalesWings Page Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>