force-app/main/default/objects/saleswings__Website_Visit__c/fields/saleswings__Created_Date_Lead__c.field-meta.xml
<CustomField>
    <fullName>saleswings__Created_Date_Lead__c</fullName>
    <formula>saleswings__Lead__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date</label>
    <type>Date</type>
</CustomField>