force-app/main/default/objects/saleswings__Website_Visit__c/fields/saleswings__Email_Contact__c.field-meta.xml
<CustomField>
    <fullName>saleswings__Email_Contact__c</fullName>
    <formula>saleswings__Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Contact</label>
    <type>Text</type>
</CustomField>