force-app/main/default/objects/saleswings__Website_Visit__c/fields/saleswings__Email_Lead__c.field-meta.xml
<CustomField>
    <fullName>saleswings__Email_Lead__c</fullName>
    <formula>saleswings__Lead__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>