force-app/main/default/objects/saleswings__Website_Visit__c/fields/saleswings__Favorite_Lead__c.field-meta.xml
<CustomField>
    <fullName>saleswings__Favorite_Lead__c</fullName>
    <formula>saleswings__Lead__r.saleswings__Favorite_Icon__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Favorite</label>
    <type>Text</type>
</CustomField>