force-app/main/default/objects/saleswings__Website_Visit__c/fields/saleswings__Name_Contact__c.field-meta.xml
<CustomField>
    <fullName>saleswings__Name_Contact__c</fullName>
    <formula>saleswings__Contact__r.FirstName + &#39; &#39; +   saleswings__Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>