force-app/main/default/objects/saleswings__Website_Visit__c/fields/saleswings__Name_Lead__c.field-meta.xml
<CustomField>
    <fullName>saleswings__Name_Lead__c</fullName>
    <formula>saleswings__Lead__r.FirstName  + &#39; &#39; +   saleswings__Lead__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>