force-app/main/default/objects/saleswings__Website_Visit__c/fields/saleswings__Owner_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>saleswings__Owner_Last_Name__c</fullName>
    <formula>IF(ISBLANK(saleswings__Contact__c),saleswings__Lead__r.Owner:User.LastName,saleswings__Contact__r.Owner.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Last Name</label>
    <type>Text</type>
</CustomField>