force-app/main/default/objects/saleswings__Website_Visit__c/fields/saleswings__Page__c.field-meta.xml
<CustomField>
    <fullName>saleswings__Page__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Page</label>
    <referenceTo>saleswings__Page__c</referenceTo>
    <relationshipLabel>SW - SalesWings Page Visits</relationshipLabel>
    <relationshipName>Website_Visits</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>