force-app/main/default/objects/saleswings__Website_Visit__c/fields/saleswings__Site_Last_Visit__c.field-meta.xml
<CustomField>
    <fullName>saleswings__Site_Last_Visit__c</fullName>
    <formula>IF(ISBLANK( saleswings__Contact__c ),saleswings__Lead__r.saleswings__Last_Visit_Datetime__c,saleswings__Contact__r.saleswings__Last_Visit_Datetime__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Last Visit</label>
    <type>DateTime</type>
</CustomField>