force-app/main/default/objects/saleswings__Website_Visit__c/fields/saleswings__Visitor_name2__c.field-meta.xml
<CustomField>
    <fullName>saleswings__Visitor_name2__c</fullName>
    <description>for reports</description>
    <formula>HYPERLINK(IF( saleswings__Contact__c &lt;&gt; null, &quot;/&quot; &amp; saleswings__Contact__r.Id , if( saleswings__Lead__c &lt;&gt; null, &quot;/&quot; &amp; saleswings__Lead__r.Id , &quot;empty&quot;)  ) ,IF( saleswings__Contact__c &lt;&gt; null,&quot;Contact: &quot; &amp; saleswings__Contact__r.FirstName  &amp; &quot; &quot; &amp; saleswings__Contact__r.LastName   , if( saleswings__Lead__c &lt;&gt; null,&quot;Lead: &quot; &amp; saleswings__Lead__r.FirstName &amp; &quot; &quot; &amp; saleswings__Lead__r.LastName    , &quot;empty&quot;) ),&quot;_self&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visitor Name</label>
    <type>Text</type>
</CustomField>