force-app/main/default/objects/saleswings__Website_Visit__c/listViews/saleswings__Contacts.listView-meta.xml
<ListView>
    <fullName>saleswings__Contacts</fullName>
    <columns>saleswings__Owner__c</columns>
    <columns>saleswings__Visitor_name2__c</columns>
    <columns>saleswings__Current_Interest_Lead__c</columns>
    <columns>saleswings__Page__c</columns>
    <columns>saleswings__Number_of_visits__c</columns>
    <columns>saleswings__Site_Last_Visit__c</columns>
    <columns>saleswings__Favorite_Lead__c</columns>
    <columns>saleswings__View__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>saleswings__Contact__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>SalesWings 7 - Contacts</label>
</ListView>